--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,54 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.model.application'
 
-android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+model {
+    android {
+        compileSdkVersion 23
+        buildToolsVersion '23.0.3'
 
-    defaultConfig {
-        applicationId "net.ddns.adfawkes.scratchapp"
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        defaultConfig {
+            applicationId 'net.ddns.adfawkes.scratchapp'
+            minSdkVersion.apiLevel 15
+            targetSdkVersion.apiLevel 23
+            versionCode 1
+            versionName "1.0"
+        }
+
+        ndk {
+            moduleName 'hello'
+            toolchain = 'clang'
+            CFlags.addAll(['-Wall'])
+        }
+
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles.add(file('proguard-android.txt'))
+            }
+        }
+
+        productFlavors {
+            create('arm') {
+                ndk.abiFilters.add('armeabi')
+            }
+            create('arm7') {
+                ndk.abiFilters.add('armeabi-v7a')
+            }
+            create('arm8') {
+                ndk.abiFilters.add('arm64-v8a')
+            }
+            create('x86') {
+                ndk.abiFilters.add('x86')
+            }
+            create('x86-64') {
+                ndk.abiFilters.add('x86_64')
+            }
+            create('mips') {
+                ndk.abiFilters.add('mips')
+            }
+            create('mips-64') {
+                ndk.abiFilters.add('mips64')
+            }
+            create('all')
         }
     }
 }
