Integrate Google Test using Android.mk and adb
This needs to be integrated into Gradle, but it's not clear how to do that
correctly. Tests would ideally run on Windows, but there's no great way to
support that without introducing an external compiler dependency. Tests
can run on hardware device or simulator.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
+**/libs
+**/obj
 /build
-/captures
+
+/.idea/libraries
+/.idea/workspace.xml
+
+/local.properties
+.gradle
