--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ model {
         }
 
         ndk {
-            moduleName 'scratchapp'
+            moduleName 'picalc'
             toolchain = 'clang'
             CFlags.addAll(['-Wall'])
             stl "stlport_static"
