Clean up minor issues in workspace
Fix build error with misplaced GIMP file. Improve implementation sharing
pattern between IPiCalculator unit tests. Add missing tests to
IPiCalculatorTest. Update .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-**/libs
-**/obj
-/build
+build/
+libs/
+obj/
 
-/.idea/libraries
-/.idea/workspace.xml
+.idea/libraries/
+.idea/shelf/
+.idea/workspace.xml
 
-/local.properties
-.gradle
+.google/
+.gradle/
+local.properties
+app.iml
