--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="net.ddns.adfawkes.scratchapp">
+          package="com.gmail.fawkes.alex.scrollpi">
 
     <application
         android:allowBackup="false"
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ScrollPiActivity">
+        <activity android:name="com.gmail.fawkes.alex.scrollpi.ScrollPiActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
