Recreate project to force name change, confirm settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-build/
-libs/
-obj/
-
-.idea/libraries/
-.idea/shelf/
+*.iml
+.gradle
+/local.properties
+/.idea/libraries
+/.idea/workspace.xml
+/build
 .idea/misc.xml
-.idea/workspace.xml
-
-.google/
-.gradle/
-local.properties
-app.iml
