Experiment with boost::multiprecision
Try using boost::multiprecision for arbitrary width
calculations. This has the downside of increased
memory usage as more digits are calculated, but is
able to produce base 10 values.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ model {
         ndk {
             moduleName 'fawkes'
             toolchain = 'clang'
+            cppFlags.add('-frtti')
             cppFlags.add('-fexceptions')
             cppFlags.add('-Wall')
             cppFlags.add('-I' + boostRoot())
